# YZM_304_Lab_Models

./: .gitignore  README.md
CNN_Project/: .gitignore  README.md  requirements.txt
CNN_Project/artifacts/reports/: experiment_metrics.csv  hybrid_feature_summary.json  model_1_lenet_baseline_history.csv  model_2_lenet_improved_history.csv  model_3_resnet18_reference_history.csv  model_5_full_cnn_for_hybrid_comparison_history.csv  summary.json
CNN_Project/scripts/: run_pipeline.ps1  setup_env.ps1
CNN_Project/src/: __init__.py  config.py  data.py  metrics.py  reporting.py  run_experiments.py  training.py
CNN_Project/src/models/: __init__.py  (+4 more)
CNN_Project/tests/: test_metrics.py  test_models.py  test_split_utils.py
MLP_Breast_Cancer_Classification/: .gitignore  README.md  pyproject.toml  requirements-lock.txt  run_project.py
MLP_Breast_Cancer_Classification/artifacts/final/: eda_summary.json  model_comparison.csv  summary.json
MLP_Breast_Cancer_Classification/scripts/: run_checks.ps1  run_pipeline.ps1  setup_env.ps1
MLP_Breast_Cancer_Classification/src/ymz304_project/: __init__.py  cli.py  data.py  experiment.py  initialization.py  metrics.py  numpy_mlp.py  reporting.py  sklearn_model.py  torch_model.py
MLP_Breast_Cancer_Classification/tests/: test_data_pipeline.py  test_experiment_pipeline.py  test_initialization_and_sklearn.py  test_numpy_mlp.py
MLP_Project/: README.md  requirements.txt
MLP_Project/src/: __init__.py  data.py  metrics.py  run_experiments.py
MLP_Project/tests/: test_artifacts.py  test_data.py  test_library_wrappers.py  test_numpy_mlp.py
(+14 files in other folders)
