[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ymz304-project"
version = "0.1.0"
description = "YZM304 Derin Ogrenme proje odevi icin tekrar uretilebilir deney deposu."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "ytuna" }
]
dependencies = [
  "numpy>=2.2,<3",
  "pandas>=2.2,<3",
  "scikit-learn>=1.6,<2",
  "matplotlib>=3.10,<4",
  "seaborn>=0.13,<0.14",
  "torch>=2.7,<3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.11,<0.12"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["N803", "N806"]
